@@ -365,7 +365,7 @@ class AppController < NSObject
   
   def complete_nick(forward)
     u, c = @world.sel
-    return unless u
+    return unless u && c
     @world.select_text if @window.firstResponder != @window.fieldEditor_forObject(true, @text)
     fe = @window.fieldEditor_forObject(true, @text)
     return unless fe
@@ -379,6 +379,9 @@ class AppController < NSObject
       r = status.range.dup
     end
     
+    # pre is the left part of the cursor
+    # sel is the right part of the cursor
+    
     s = @text.stringValue
     pre = s.substringToIndex(r.location).to_s
     sel = s.substringWithRange(r).to_s
@@ -389,35 +392,32 @@ class AppController < NSObject
       head = true
     end
     return if pre.empty?
+    
+    # workaround for the @nick form
+    # @nick should not be @nick:
 
     headchar = pre[0]
     if /^[^\w\[\]\\`_^{}|]/ =~ pre
-      head = headchar == ?@ if head
+      head = true if head && headchar == ?@
       pre[0] = ''
       return if pre.empty?
     end
+    
+    # prepare for the matching
     
     current = pre + sel
     current = $1 if /([^:\s]+):?\s?$/ =~ current
     downpre = pre.downcase
     downcur = current.downcase
     
-    n = 0
-    if c
-      nicks = c.members.sort_by {|i| [-i.weight, n += 1] }.map {|i| i.nick }
-      nicks = nicks.select {|i| i[0...pre.size].downcase == downpre }
-      nicks -= [u.mynick]
-    end
-    if !c || nicks.empty?
-      # try channels
-      u = @world.selunit
-      if u
-        channels = u.channels.map {|i| i.name }
-        channels = channels.select {|i| i[0] == headchar }.map{|i| i[1..-1]}
-        nicks = channels
-      end
-      return if nicks.empty?
-    end
+    # sort the choices
+    
+    nicks = c.members.sort_by {|i| [-i.weight, i.nick.downcase] }.map {|i| i.nick }
+    nicks = nicks.select {|i| i[0...pre.size].downcase == downpre }
+    nicks -= [u.mynick]
+    return if nicks.empty?
+    
+    # find the next choice
     
     index = nicks.index {|i| i.downcase == downcur }
     if index
@@ -433,6 +433,8 @@ class AppController < NSObject
       s = nicks[0]
     end
     
+    # add suffix
+    
     if head
       if headchar == ?@
         s += ' '
@@ -440,6 +442,8 @@ class AppController < NSObject
         s += ': '
       end
     end
+    
+    # set completed nick to the text field
     
     ps = pre.to_ns
     ns = s.to_ns
