@@ -1,3 +1,7 @@
+2008-05-01  Satoshi Nakagawa <artension@gmail.com>
+
+	Changed to not use channels for nick completion.
+
 2008-04-26  Satoshi Nakagawa <artension@gmail.com>
 
 	Fixed a bug, parameters for Time.at should be Fixnum.
